整理全局样式

--- a/src/components/MyHeader/index.less
+++ b/src/components/MyHeader/index.less
@@ -2,13 +2,15 @@
 
 .@{prefix}-component-header {
   &-content {
-    height: 63px;
+    height       : @topMenuHeight;
     border-bottom: 1px solid #999;
-    .top{
+
+    .top {
       width: 100%;
-      .top-icon{
+
+      .top-icon {
         font-size: 28px;
-        cursor: pointer;
+        cursor   : pointer;
       }
     }
   }
