--- a/src/containers/Home/index.less
+++ b/src/containers/Home/index.less
@@ -2,20 +2,26 @@
 
 .@{prefix}-home {
   &-content {
-    .ant-layout-sider{
-      width: @leftMenuWidth !important;
-      height: 100vh;
-      min-width: @leftMenuWidth !important;
-      flex: none !important;
+    .ant-layout-sider {
+      width    : @leftMenuWidth  !important;
+      height   : 100vh;
+      min-width: @leftMenuWidth  !important;
+      flex     : none !important;
     }
-    .ant-layout-header{
+
+    .ant-layout-header {
       background-color: #fff;
-      padding: 0;
+      padding         : 0;
     }
-    .ant-layout-content{
-      overflow-y: auto;
-      height: calc(100vh - 64px);
+
+    .ant-layout-content {
+      overflow-y      : auto;
+      height          : calc(100vh - @topMenuHeight);
       background-color: #fff;
+    }
+
+    .ant-header {
+      height: @topMenuHeight;
     }
   }
 }
