--- a/src/theme/variable.less
+++ b/src/theme/variable.less
@@ -1,4 +1,6 @@
 // 注意：less声明变量值不要写成字符串，比如@prefix:"wlf"这样写是错的，应该写成@prefix:wlf;
-@prefix: qfy;
+@prefix       : qfy;
 // 左侧menu宽度
-@leftMenuWidth:100px;
+@leftMenuWidth: 100px;
+// 顶部个人信息等的高度
+@topMenuHeight: 65px;
