整理一下代码

--- a/src/containers/Home/index.less
+++ b/src/containers/Home/index.less
@@ -2,26 +2,30 @@
 
 .@{prefix}-home {
   &-content {
-    .ant-layout-sider {
-      width    : @leftMenuWidth  !important;
-      height   : 100vh;
-      min-width: @leftMenuWidth  !important;
-      flex     : none !important;
+    .layout1-className {
+      .ant-layout-sider {
+        width    : @leftMenuWidth  !important;
+        height   : 100vh;
+        min-width: @leftMenuWidth  !important;
+        flex     : none !important;
+      }
+
+      .ant-layout-header {
+        background-color: #fff;
+        padding         : 0;
+      }
+
+      .ant-layout-content {
+        overflow-y      : auto;
+        height          : calc(100vh - @topMenuHeight);
+        padding         : 10px 10px;
+        background-color: @contentBgc;
+      }
+
+      .ant-header {
+        height: @topMenuHeight;
+      }
     }
 
-    .ant-layout-header {
-      background-color: #fff;
-      padding         : 0;
-    }
-
-    .ant-layout-content {
-      overflow-y      : auto;
-      height          : calc(100vh - @topMenuHeight);
-      background-color: #fff;
-    }
-
-    .ant-header {
-      height: @topMenuHeight;
-    }
   }
 }
