--- a/src/theme/variable.less
+++ b/src/theme/variable.less
@@ -4,3 +4,7 @@
 @leftMenuWidth: 100px;
 // 顶部个人信息等的高度
 @topMenuHeight: 65px;
+// 内容背景布局
+@contentBgc   : #f0f3f6;
+// 二级菜单栏宽度
+@secondLeftMenuWidth: 200px;
