头部和左侧栏样式

--- a/src/theme/variable.less
+++ b/src/theme/variable.less
@@ -1,10 +1,12 @@
 // 注意：less声明变量值不要写成字符串，比如@prefix:"wlf"这样写是错的，应该写成@prefix:wlf;
-@prefix       : qfy;
+@prefix             : qfy;
 // 左侧menu宽度
-@leftMenuWidth: 100px;
+@leftMenuWidth      : 60px;
 // 顶部个人信息等的高度
-@topMenuHeight: 65px;
+@topMenuHeight      : 45px;
 // 内容背景布局
-@contentBgc   : #f0f3f6;
+@contentBgc         : #f0f3f6;
 // 二级菜单栏宽度
-@secondLeftMenuWidth: 200px;
+@secondLeftMenuWidth: 128px;
+// 边框颜色
+@border             : #dddedf;
