--- a/src/components/LeftMenu/index.less
+++ b/src/components/LeftMenu/index.less
@@ -5,22 +5,21 @@
     .menu {
       width: @leftMenuWidth;
       height: 100vh;
-      background-color: #051337;
+      background-color: #2b3645;
 
       .top {
-        height: 80px;
+        height: 50px;
         width: 80%;
         margin: 0 auto;
 
         img {
           width: 100%;
           height: 40px;
-          margin-top: 20px;
         }
       }
 
       .bottom {
-        height: calc(100vh - 80px);
+        height: calc(100vh - 50px);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -31,11 +30,11 @@
           padding: 10px 0;
 
           &-icon {
-            font-size: 28px;
+            font-size: 22px;
             color: #fff;
           }
           &-title {
-            font-size: 16px;
+            font-size: 12px;
             color: #fff;
           }
         }
