--- a/src/containers/Home/Personnel/index.less
+++ b/src/containers/Home/Personnel/index.less
@@ -2,10 +2,22 @@
 
 .@{prefix}-home-personnel {
     &-content {
-        .content{
-            width: 20px;
-            height: 100%;
-            background-color: #fff;
+        .layout2 {
+            .layout2-sider {
+                width    : @secondLeftMenuWidth  !important;
+                height   : calc(100vh - @topMenuHeight - 20px);
+                min-width: @secondLeftMenuWidth  !important;
+                flex     : none !important;
+                background-color: #fff;
+                border: 1px solid @border;
+            }
+
+            .layout2-content {
+                overflow-y      : auto;
+                height          : calc(100vh - @topMenuHeight - 20px);
+                padding         : 10px 10px;
+                background-color: @contentBgc;
+            }
         }
     }
 }
