二级导航组件

--- a/src/components/SecondMenu/index.less
+++ b/src/components/SecondMenu/index.less
@@ -1,6 +1,9 @@
 @import './../../theme/variable.less';
-.@{prefix}-component-secondmenu{
-    &-content{
-        
+
+.@{prefix}-component-secondmenu {
+    &-content {
+        .menu1 {
+            border-right: 0 !important;
+        }
     }
 }
