--- a/src/containers/Home/Personnel/Roster/index.less
+++ b/src/containers/Home/Personnel/Roster/index.less
@@ -1,7 +1,5 @@
 @import './../../../../theme/variable.less';
 
-.@{prrefix}-home-personnel-staff {
-    &-content {
-
-    }
+.@{prefix}-home-personnel-staff {
+    &-content {}
 }
