--- a/src/containers/Home/Personnel/index.less
+++ b/src/containers/Home/Personnel/index.less
@@ -4,19 +4,21 @@
     &-content {
         .layout2 {
             .layout2-sider {
-                width    : @secondLeftMenuWidth  !important;
-                height   : calc(100vh - @topMenuHeight - 20px);
-                min-width: @secondLeftMenuWidth  !important;
-                flex     : none !important;
+                width           : @secondLeftMenuWidth  !important;
+                height          : calc(100vh - @topMenuHeight - 20px);
+                min-width       : @secondLeftMenuWidth  !important;
+                flex            : none !important;
                 background-color: #fff;
-                border: 1px solid @border;
+                border          : 1px solid @border;
             }
 
             .layout2-content {
                 overflow-y      : auto;
                 height          : calc(100vh - @topMenuHeight - 20px);
                 padding         : 10px 10px;
-                background-color: @contentBgc;
+                background-color: #fff;
+                border          : 1px solid @border;
+                border-left     : none;
             }
         }
     }
