二级导航栏布局

--- a/src/components/SecondMenu/index.less
+++ b/src/components/SecondMenu/index.less
@@ -4,6 +4,13 @@
     &-content {
         .menu1 {
             border-right: 0 !important;
+
+            .ant-menu-sub {
+                .ant-menu-item {
+                    padding-left: 24px !important;
+                    font-size   : 13px;
+                }
+            }
         }
     }
 }
