--- a/src/components/MyContent/index.less
+++ b/src/components/MyContent/index.less
@@ -15,8 +15,8 @@
             .layout2-content {
                 overflow-y      : auto;
                 height          : calc(100vh - @topMenuHeight - 20px);
-                padding         : 10px 10px;
-                background-color: #fff;
+                padding         : 20px;
+                // background-color: #fff;
                 border          : 1px solid @border;
                 border-left     : none;
             }
