取消整体样式padding

--- a/src/components/MyContent/index.less
+++ b/src/components/MyContent/index.less
@@ -15,7 +15,7 @@
             .layout2-content {
                 overflow-y      : auto;
                 height          : calc(100vh - @topMenuHeight - 20px);
-                padding         : 20px;
+                // padding         : 20px;
                 // background-color: #fff;
                 border          : 1px solid @border;
                 border-left     : none;
