花名册-top组件

--- a/src/components/Title/index.less
+++ b/src/components/Title/index.less
@@ -11,7 +11,7 @@
             &-left {
                 width           : 4px;
                 height          : 18px;
-                background-color: #497eef;
+                background-color: @borderGreen;
                 border-radius   : 3px;
                 position        : relative;
                 top             : 3px;
