--- a/src/containers/Home/Personnel/Roster/index.less
+++ b/src/containers/Home/Personnel/Roster/index.less
@@ -1,5 +1,10 @@
 @import './../../../../theme/variable.less';
 
-.@{prefix}-home-personnel-staff {
-    &-content {}
+.@{prefix}-home-personnel-roster {
+    &-content {
+        .top{
+            padding: 20px;
+            background-color: #fff;
+        }
+    }
 }
