--- a/src/containers/Home/Personnel/Roster/index.less
+++ b/src/containers/Home/Personnel/Roster/index.less
@@ -3,8 +3,16 @@
 .@{prefix}-home-personnel-roster {
     &-content {
         .top{
-            padding: 20px ;
+            padding: 20px 10px;
             background-color: #fff;
+            margin-bottom: 10px;
+        }
+        .table{
+            background-color: #fff;
+            padding: 0 10px;
+            .table-top{
+                padding: 20px 0;
+            }
         }
     }
 }
