--- a/src/containers/Home/Personnel/Roster/Search/index.less
+++ b/src/containers/Home/Personnel/Roster/Search/index.less
@@ -1,5 +1,12 @@
 @import './../../../../../theme/variable.less';
 
 .@{prefix}-home-personnel-roster-search {
-    &-content {}
+    &-content {
+        // 修改input-number 样式
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button{
+            -webkit-appearance: none !important;
+            margin: 0; 
+        }
+    }
 }
