--- a/src/containers/Home/Personnel/Roster/Top/index.less
+++ b/src/containers/Home/Personnel/Roster/Top/index.less
@@ -33,6 +33,10 @@
 
                     .num {
                         text-align: center;
+
+                        span {
+                            color: #333;
+                        }
                     }
                 }
 
@@ -66,6 +70,12 @@
 
         .focus {
             color: @borderGreen;
+
+            .num {
+                span {
+                    color: @borderGreen !important;
+                }
+            }
         }
 
         .focus-border {
